# llama.cpp

ggml/: CMakeLists.txt
ggml/include/: ggml-directml.h  ggml-directx.h
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp  ggml-backend.cpp  ggml-directml.cpp  ggml.c
ggml/src/ggml-directx/: CMakeLists.txt  ggml-directx.cpp
